# ot-running-calendar

./: .coverage  .coveragerc  README.md  pyproject.toml  tasks.py
data/: database.sqlite
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohjeet.md  testaus.md  tyoaikakirjanpito.md  tyoaikakirjanpito.md.save  vaatimusmaarittely.md  vaatimusmäärittely.md
laskarit/viikko2/unicafe/unicafe/: pyproject.toml
laskarit/viikko2/unicafe/unicafe/htmlcov/: index.html
laskarit/viikko2/unicafe/unicafe/src/: kassapaate.py
laskarit/viikko2/unicafe/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: hsl.md  hsl_koodi  monopoli.md
src/: database_connection.py  index.py  initialize_database.py
src/entities/: plan.py  run.py  run_calendar.py  run_plan.py  user.py
src/repositories/: plan_repository.py  run_repository.py  user_repository.py
src/services/: run_calendar_service.py  running_calendar.py
src/tests/: conftest.py  plan_test.py  run_calendar_service_test.py  run_repository_test.py  running_app_test.py  user_repository_test.py
src/ui/: plan.py  ui.py  user.py
