[tool.poetry]
name = "ot-harjoitustyo"
version = "0.1.0"
description = ""
authors = ["Aura Pasila <aura.pasila@helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^2.2.0"
werkzeug = "^3.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
coverage = "^7.3.1"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.4"
pylint = "^3.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
